# LlamaIndex-k8s

./: README.md  pyproject.toml
langchain_test/: downloader.py  langchain_sum2vec.py
llamaindex-k8s/: data_cleanup.py  data_loader.py  docsummaryindex_relation.py  instruction_generate.py  keyword_index-gpt.py  keyword_index.py  storage_chroma.py  summary_index-gpt.py  test_data_cleanup.py  vector_index.py
llamaindex-k8s/index_store/index/: index_store.json
llamaindex-k8s/index_store/index_multi_doc/: docstore.json  index_store.json
llamaindex_k8s/: data_cleanup.py  data_loader.py  docsummaryindex.py  docsummaryindex_relation.py  index2model.py  instruction_generate.py  summary2vector_2.py  summary2vector_3.py  summary2vector_4.py  summary_index-gpt.py  summary_index.py  three_pigs  vector_index.py  vector_only_title.py
llamaindex_k8s/demo_1/: doc2summary.py  retriever2qa.py  summary2vector.py
llamaindex_k8s/index_store/index/: docstore.json
llamaindex_k8s/index_store/index_one_doc/: docstore.json  index_store.json
llamaindex_k8s/index_store/index_posts/: docstore.json  index_store.json
llamaindex_k8s/index_store/summary2vector/5_doc_summary/: docstore.json  index_store.json
llamaindex_k8s/index_store/summary2vector/5_summary_vector/: chroma.sqlite3
llamaindex_k8s/index_store/summary2vector/posts_summary/: docstore.json  index_store.json
llamaindex_k8s/index_store/summary2vector/posts_vector/: chroma.sqlite3
llamaindex_k8s/index_store/test/: docstore.json  index_store.json
tmp/: post.yaml
